# gbvsr-frame-meter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MAINTENANCE.MD  README.md  TODO.md  xmake.lua
.github/workflows/: ci.yml  release.yml
FrameMeter/: CMakeLists.txt  xmake.lua
FrameMeter/automation/: capture.ahk  character_selection.ahk  config.ahk  dummy.ahk  key_config.ahk  menu_usage.ahk  moves.ahk  position_resets.ahk  record_test_data.ahk  tests.ahk  utils.ahk
FrameMeter/src/core/: battle.cpp  battle.h  bitmask.h  dump.cpp  dump.h  hitbox.cpp  hitbox.h  math.cpp  math.h  meter.cpp  meter.h  struct_util.h
FrameMeter/src/mod/: debug.cpp  debug.h  dllmain.cpp  draw.cpp  draw.h  game.cpp  game.h  sigscan.cpp  sigscan.h  ui.cpp  ui.h
FrameMeter/src/test/: main.cpp  meter_snapshot.cpp  meter_snapshot.h  output_sink.h  snapshot.cpp  snapshot.h
FrameMeter/test_data/: 2b_backdash.hitboxes  2b_backdash.meter  2b_evade.hitboxes  2b_evade.meter  avatar_belial_2S_U_ranged_whiff.hitboxes  avatar_belial_2S_U_ranged_whiff.meter  beelzebub_6S+U_guard.meter  beelzebub_6S+U_whiff.meter  cagliostro_S+H_guard.meter  cagliostro_S_guard_neutral_jump.hitboxes  cagliostro_S_guard_neutral_jump.meter  cagliostro_S_whiff.hitboxes  cagliostro_S_whiff.meter  charlotta_5U_whiff.hitboxes  charlotta_5U_whiff.meter  charlotta_S+U_guard.hitboxes  charlotta_S+U_guard.meter  charlotta_S+U_whiff.hitboxes  charlotta_S+U_whiff.meter  charlotta_autocombo_overhead_guard.hitboxes  charlotta_autocombo_overhead_guard.meter  charlotta_fL_whiff.hitboxes  charlotta_fL_whiff.meter  charlotta_neutral_jump.hitboxes  charlotta_neutral_jump.meter  charlotta_neutral_jump_air_block.hitboxes  charlotta_neutral_jump_air_block.meter  charlotta_throw_hit.hitboxes  charlotta_throw_hit.meter  eustace_jU_whiff.hitboxes  eustace_jU_whiff.meter  ferry_6S_guard.hitboxes  ferry_6S_guard.meter  ferry_6S_whiff.meter  katalina_2S+U_guard.hitboxes  katalina_2S+U_guard.meter  katalina_2S+U_ranged_guard.hitboxes  katalina_2S+U_ranged_guard.meter  katalina_2S+U_whiff.meter  katalina_S_guard.hitboxes  (+16 more)
FrameMeterMod/: CMakeLists.txt  bitmask.h  debug.cpp  debug.h  dllmain.cpp  draw.cpp  draw.h  game.cpp  game.h  meter.cpp  meter.h  struct_util.h  ui.cpp  ui.h
scripts/: build.bat  build.ps1  generate_solution.bat  record_test_data.ps1  release.ps1  test.ps1
